# datamatrix2codes

./: .gitattributes  .gitignore  Datamatrix2Codes.pm  README.md  cpanfile  datamatrix2codes.pl  pyproject.toml
.github/workflows/: build-and-test.yml  documentation.yml
data/: codes.csv  results.tsv
datamatrix2codes/: cli.py
docs/: excel.md  parser.md  python-cli.md  troubleshooting.md
docs-site/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
docs-site/docs/: overview.mdx
docs-site/docs/about/: license.md
docs-site/docs/installation/: macos.md  windows.md
docs-site/docs/technical-details/: parser.md  scanner-diagnostics.md
docs-site/docs/usage/: example-codes.md  excel-feedback.md  excel-quickstart.md  python-cli.md  review-colors.md  troubleshooting.md
docs-site/scripts/: excel-conversion-workflow.html  excel-feedback.html  macos-install.html  review-colors.html  windows-install.html
docs-site/src/css/: custom.css
docs-site/src/pages/: index.module.css  index.tsx
macro/: ParseEncodedString  ParseEncodedString.bas  README.md  datamatrix2codes.xlsm
src/datamatrix2codes/: __init__.py  cli.py  parser.py
tests/: __init__.py  test_parser.py  test_synthetic_generator.py
tools/: generate_synthetic_codes.py
