[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "datamatrix2codes"
version = "0.1.0"
description = "Extract PC, SN, LOTE, and CAD from raw GS1 DataMatrix strings."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Manuel Rueda" }
]

[project.scripts]
datamatrix2codes = "datamatrix2codes.cli:main"

[tool.setuptools]
packages = ["datamatrix2codes"]
